# GPS

./: .gitignore  LICENSE  README.md  pyproject.toml
lib/: base_experiments.py  boruta_selector.py  boruta_shap.py  column_sets.py  combinations.py  consts.py  correspondant_analysis.py  counterfactual_plot.py  data_filter.py  data_series.py  filter_data.py  gene_column_sets.py  gene_profiles.py  genetic_data.py  kernels.py  knn.py  lda.py  literature_genes.py  logging_helpers.py  metrics.py  modifications.py  nn_random_search.py  norms.py  notebook_imports.py  p_value.py  plot_column_relation_with_targets.py  plot_targets.py  plot_train_results.py  prepare_data_for_nn.py  protocol_sets.py  rarest_columns.py  read_data.py  read_data_2015.py  read_haplotypes.py  roc.py  shap_utils.py  show_process.py  simulate.py  som.py  split_utils.py  (+7 more)
notebooks/: Contraception_impact.ipynb  ECDF.ipynb  Feature_selection_boruta.ipynb  Feature_selection_subsets_experiments.ipynb  Gene_variants_selection-experiments.ipynb  Hiperstimulation_base_experiments.ipynb  Hiperstimulation_comparison_of_datasets.ipynb  InVitro_krr.ipynb  InVitro_krr_prot_type.ipynb  Modelling-experiments.ipynb  Outlier_analysis.ipynb  System_simulations.ipynb
